crates/runtime/benches/snapshots/bench__s3_sqlite_file_tpcds_q83.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+------------------+-------------+--------+-------------+--------+-------------+--------+--------------------+
| item_id          | sr_item_qty | sr_dev | cr_item_qty | cr_dev | wr_item_qty | wr_dev | average            |
+------------------+-------------+--------+-------------+--------+-------------+--------+--------------------+
| AAAAAAAACDAAAAAA | 9           | 0.0    | 1           | 0.0    | 55          | 0.0    | 21.666666666666668 |
| AAAAAAAAKHAAAAAA |             |        | 37          |        | 2           |        |                    |
+------------------+-------------+--------+-------------+--------+-------------+--------+--------------------+
