crates/runtime/benches/snapshots/bench__s3_sqlite_file_tpcds_q86.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+------------+-------------+---------+--------------+--------------------+
| total_sum  | i_category  | i_class | lochierarchy | rank_within_parent |
+------------+-------------+---------+--------------+--------------------+
| 3211462.48 |             |         | 2            | 1                  |
| 499784.37  | Men         |         | 1            | 1                  |
| 443032.60  | Books       |         | 1            | 2                  |
| 424950.72  | Women       |         | 1            | 3                  |
| 387174.80  | Electronics |         | 1            | 4                  |
| 352757.32  | Music       |         | 1            | 5                  |
| 314242.54  | Jewelry     |         | 1            | 6                  |
| 245705.09  | Children    |         | 1            | 7                  |
| 226431.85  | Home        |         | 1            | 8                  |
| 208694.99  | Sports      |         | 1            | 9                  |
+------------+-------------+---------+--------------+--------------------+
