crates/runtime/benches/snapshots/bench__s3_sqlite_file_tpcds_q87.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+----------+
| count(*) |
+----------+
| 459      |
+----------+
