crates/runtime/benches/snapshots/bench__s3_sqlite_file_tpcds_q88.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+------------+------------+-------------+--------------+--------------+--------------+--------------+--------------+
| h8_30_to_9 | h9_to_9_30 | h9_30_to_10 | h10_to_10_30 | h10_30_to_11 | h11_to_11_30 | h11_30_to_12 | h12_to_12_30 |
+------------+------------+-------------+--------------+--------------+--------------+--------------+--------------+
| 0          | 0          | 0           | 0            | 0            | 0            | 0            | 0            |
+------------+------------+-------------+--------------+--------------+--------------+--------------+--------------+
