crates/runtime/benches/snapshots/bench__s3_sqlite_file_tpcds_q89.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+-------------+-----------+-----------------------+--------------+----------------+-------+-----------+-------------------+
| i_category  | i_class   | i_brand               | s_store_name | s_company_name | d_moy | sum_sales | avg_monthly_sales |
+-------------+-----------+-----------------------+--------------+----------------+-------+-----------+-------------------+
| Music       | classical | edu packscholar #2    | ought        | Unknown        | 4     | 97.34     | 609.269167        |
| Music       | classical | edu packscholar #2    | ought        | Unknown        | 2     | 114.65    | 609.269167        |
| Music       | classical | edu packscholar #2    | ought        | Unknown        | 6     | 226.78    | 609.269167        |
| Music       | classical | edu packscholar #2    | ought        | Unknown        | 7     | 312.28    | 609.269167        |
| Electronics | audio     | edu packunivamalg #11 | ought        | Unknown        | 6     | 21.66     | 198.143333        |
| Music       | classical | edu packscholar #2    | ought        | Unknown        | 5     | 461.09    | 609.269167        |
| Electronics | audio     | edu packunivamalg #11 | ought        | Unknown        | 4     | 67.19     | 198.143333        |
| Electronics | audio     | edu packunivamalg #11 | ought        | Unknown        | 3     | 78.57     | 198.143333        |
| Music       | classical | edu packscholar #2    | ought        | Unknown        | 3     | 491.89    | 609.269167        |
| Electronics | audio     | edu packunivamalg #11 | ought        | Unknown        | 5     | 81.22     | 198.143333        |
+-------------+-----------+-----------------------+--------------+----------------+-------+-----------+-------------------+
