crates/runtime/benches/snapshots/bench__s3_sqlite_file_tpcds_q9.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+-------------+------------+------------+--------------+--------------+
| bucket1     | bucket2    | bucket3    | bucket4      | bucket5      |
+-------------+------------+------------+--------------+--------------+
| -162.240579 | 105.717631 | 198.330831 | -1178.708247 | -1467.157090 |
+-------------+------------+------------+--------------+--------------+
