crates/runtime/benches/snapshots/bench__s3_sqlite_file_tpcds_q90.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+-------------+
| am_pm_ratio |
+-------------+
| 0.87500000  |
+-------------+
