crates/runtime/benches/snapshots/bench__s3_sqlite_file_tpcds_q96.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+----------+
| count(*) |
+----------+
| 0        |
+----------+
