crates/runtime/benches/snapshots/bench__s3_sqlite_file_tpcds_q97.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+------------+--------------+-------------------+
| store_only | catalog_only | store_and_catalog |
+------------+--------------+-------------------+
| 5469       | 3246         | 188               |
+------------+--------------+-------------------+
