crates/runtime/benches/snapshots/bench__s3_sqlite_file_tpcds_q98.snap
---
source: crates/runtime/benches/bench.rs
expression: records_pretty
---
+------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+----------------+-----------------+-------------+--------------+
| i_item_id        | i_item_desc                                                                                                                                                                         | i_category | i_class        | i_current_price | itemrevenue | revenueratio |
+------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+----------------+-----------------+-------------+--------------+
| AAAAAAAAABAAAAAA | Unquestionably different demands may not turn worldwide false, wide police. Satisfied, littl                                                                                        | Men        | accessories    | 6.49            | 10116.51    | 28.960025    |
| AAAAAAAAFCAAAAAA | Strict, strong results may think even nervous husbands. Other, sexua                                                                                                                | Men        | accessories    | 2.42            | 2676.00     | 7.660451     |
| AAAAAAAAFIAAAAAA | Papers could not invade just from a wishes. Plants increase remarkably great, important exercises. Tracks should give only                                                          | Men        | accessories    | 3.12            | 7950.75     | 22.760213    |
| AAAAAAAAIFAAAAAA | Holy companies win less all right essential initiatives. Men learn. Eyes might come opportunities; great, large centres should                                                      | Men        | accessories    | 4.79            | 6851.30     | 19.612872    |
| AAAAAAAAMKAAAAAA | Automatic, black developments get thus new profits. Chemicals describe widely similar temperatures. Easy features used to emphasize different                                       | Men        | accessories    | 1.75            | 7338.11     | 21.006439    |
| AAAAAAAAFFAAAAAA | Only colleges support then institutions; correct, great processes seem perhaps national boys. Cattle                                                                                | Men        | pants          | 39.31           | 6882.35     | 100.000000   |
| AAAAAAAAEAAAAAAA | Passengers want etc in a walls. Important years must benefit clear by a ideas; hot children must avoid. Major, bad pounds rise on the needs. Farms may not see bright lines. Differ | Men        | shirts         | 4.00            | 4300.34     | 100.000000   |
| AAAAAAAADBAAAAAA | Patient                                                                                                                                                                             | Men        | sports-apparel | 10.61           | 2550.24     | 7.795778     |
| AAAAAAAADKAAAAAA | Windows report easily; diplomatic years use                                                                                                                                         | Men        | sports-apparel | 75.25           | 9418.60     | 28.791533    |
| AAAAAAAAEEAAAAAA | Labour agents take. Fairly general ques                                                                                                                                             | Men        | sports-apparel | 6.93            | 8825.92     | 26.979781    |
+------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+----------------+-----------------+-------------+--------------+
